--- a/client/src/partials/Categories.scss
+++ b/client/src/partials/Categories.scss
@@ -31,14 +31,43 @@ $darkgrey: #5b5b5b;
   }
 
   .categories_list {
-    display: flex;
-    flex-wrap: wrap;
+    margin: auto;
+    width: 100%;
     padding: 50px 0;
-    justify-content: center;
-    gap: 20px;
 
-    a {
-      text-decoration: none;
+    .slick-slider {
+      .slick-prev,
+      .slick-next {
+        z-index: 1;
+        width: 30px;
+        height: 30px;
+        color: $blue;
+
+        &:before {
+          font-size: 30px;
+        }
+      }
+
+      .slick-prev {
+        left: -35px;
+      }
+
+      .slick-next {
+        right: -35px;
+      }
+
+      .slick-dots {
+        bottom: -30px;
+        li {
+          button:before {
+            color: $blue;
+          }
+          &.slick-active button:before {
+            opacity: 1;
+            color: $pinkred;
+          }
+        }
+      }
     }
 
     .category {
@@ -46,6 +75,7 @@ $darkgrey: #5b5b5b;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin: 20px;
       width: 250px;
       height: 200px;
       cursor: pointer;
@@ -70,6 +100,7 @@ $darkgrey: #5b5b5b;
         position: absolute;
         width: 100%;
         height: 100%;
+        object-fit: cover;
       }
 
       .overlay {
