--- a/client/src/partials/booking.scss
+++ b/client/src/partials/booking.scss
@@ -6,23 +6,21 @@ $lightgrey: #efefef;
 $grey: #7c7c7c;
 $darkgrey: #626262;
 
-.booking-header {
-  
-  margin-bottom: 40px;
-  padding-top: 5px;
-  width: 100vw;
+.main-container {
+  height: 100vh;
   background: url("../../public/assets/booking.jpg") center;
 }
-.triplist-container {
+
+
+.booking-container {
   padding: 10px;
-  width: 100vw;
-  height: 100vh;
-  margin: 40px 10px;
   color: $blue;
 
+
   h2 {
+    text-align: center;
     color: $blue;
-    margin: 20px
+    margin: 20px auto;
   }
 
   hr {
@@ -30,23 +28,29 @@ $darkgrey: #626262;
     border: solid;
     border-color: $pinkred;
     border-radius: 5px;
-    height: 5px;
-    width: 50%;
-    }
-
-    @include sm {
-      margin: 40px 50px;
-    }
+    width: 80%;
   }
 
+  @include sm {
+    margin: auto;
+  }
+}
+
+.booking-content {
+  border-radius: 10px;
+  background-color: #efefef80;
+  height: 550px;
+
   .booking-list {
-    margin: 40px auto 100px;
-    padding: 10px;
     display: flex;
-flex-wrap: wrap;
-    gap: 25px;
+    flex-wrap: wrap;
+    padding: 5px;
+    gap: 10px;
+
+
 
     @include xl {
       padding: 0 20px 120px;
     }
   }
+}
