--- a/client/src/partials/navbar.scss
+++ b/client/src/partials/navbar.scss
@@ -1,7 +1,7 @@
 @import "./breakpoints.scss";
 
-$pinkred: #F8395A;
-$blue: #24355A;
+$pinkred: #fe5c77;
+$blue: #343c4c;
 $lightgrey: #c1c1c1;
 $grey: #7c7c7c;
 $darkgrey: #5b5b5b;
@@ -14,6 +14,7 @@ $darkgrey: #5b5b5b;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  background-color:rgba(230, 248, 255, 0.596);
 
   @include sm {
     padding: 10px 20px;
@@ -25,28 +26,28 @@ $darkgrey: #5b5b5b;
   }
 
   &_search {
-    border: 1px solid #fff;
+    border: 1px solid #5c9da9b9;
     border-radius: 30px;
     height: 50px;
     padding: 0px 20px;
     display: flex;
     gap: 40px;
     align-items: center;
-    background:  #ffffff0c;
+    background: #eeeeee;
 
     input {
       border: none;
       outline: none;
       background: transparent;
-      color: #F7F8F8;
+      color: #000000;
     }
 
     &:hover {
-      box-shadow: 0 3px 10px 3px rgba(0, 0, 0, 0.677);
+      box-shadow: 0 1px 10px 3px rgb(255, 255, 255);
     }
 
     .navbar_search_svg {
-      fill: #F7F8F8;
+      fill: #000000;
     }
 
     @include lg {
@@ -61,24 +62,30 @@ $darkgrey: #5b5b5b;
 
     .host {
       text-decoration: none;
-      color: #fff;
+      color: #ffffff;
       font-weight: 700;
       cursor: pointer;
+      padding: 5px;
+      text-shadow: 1px 1px 2px #242424;
 
       &:hover {
+        border: 1px solid #ffffffd6;
+        border-radius: 10px;
         color: $pinkred;
+        text-shadow: 1px 1px 2px #d1d1d1;
       }
     }
 
     &_account {
+      color: #fff;
       height: 50px;
       display: flex;
       align-items: center;
       padding: 0 10px;
-      border: 1px solid $grey;
+      border: 2px solid #fff;
       border-radius: 30px;
-      gap: 10px;
-      background-color: white;
+      gap: 15px;
+      background-color:rgba(230, 248, 255, 0.596);
       cursor: pointer;
 
       &:hover {
@@ -93,7 +100,7 @@ $darkgrey: #5b5b5b;
 
     &_dropdownmenu {
       position: absolute;
-      background-color: white;
+      background-color:rgba(230, 248, 255, 0.86);
       right: 60px;
       top: 80px;
       display: flex;
@@ -115,6 +122,7 @@ $darkgrey: #5b5b5b;
         text-decoration: none;
         color: $blue;
         font-weight: 700;
+        text-shadow: 1px 1px 2px #d6d6d6;
 
         &:hover {
           color: $pinkred;
