--- a/client/src/partials/Categories.scss
+++ b/client/src/partials/Categories.scss
@@ -7,27 +7,30 @@ $grey: #7c7c7c;
 $darkgrey: #5b5b5b;
 
 .categories_content {
-  padding: 50px 30px;
+  margin: 0;
+  padding: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: $lightgrey;
+  background-color: rgba(230, 248, 255, 0.596);
 
   @include sm {
     padding: 50px 20px;
   }
 
   h1 {
-    color: $blue;
+    color: rgb(34, 34, 34);
     font-size: 30px;
     font-weight: 800;
     margin-bottom: 10px;
+    text-shadow: 1px 1px 2px #fff;
   }
 
   p {
     max-width: 700px;
     font-size: 20px;
+    text-shadow: 1px 1px 2px #181818;
   }
 
   .categories_list {
@@ -35,39 +38,18 @@ $darkgrey: #5b5b5b;
     width: 100%;
     padding: 50px 0;
 
-    .slick-slider {
-      .slick-prev,
-      .slick-next {
-        z-index: 1;
-        width: 30px;
-        height: 30px;
-        color: $blue;
-
-        &:before {
-          font-size: 30px;
-        }
+    .slick-prev:before,
+    .slick-next:before {
+      margin: 2px;
+      font-family: 'slick';
+      font-size: 30px;
+      line-height: 1;
+      opacity: .75;
+      color: $pinkred;
+      @include sm {
+        display: none;
       }
 
-      .slick-prev {
-        left: -35px;
-      }
-
-      .slick-next {
-        right: -35px;
-      }
-
-      .slick-dots {
-        bottom: -30px;
-        li {
-          button:before {
-            color: $blue;
-          }
-          &.slick-active button:before {
-            opacity: 1;
-            color: $pinkred;
-          }
-        }
-      }
     }
 
     .category {
@@ -76,23 +58,25 @@ $darkgrey: #5b5b5b;
       justify-content: center;
       align-items: center;
       margin: 20px;
-      width: 250px;
-      height: 200px;
+      width: 291px;
+      height: 219px;
       cursor: pointer;
+
 
       &_icon {
         position: relative;
         color: white;
 
-        svg {
+        .icon {
           font-size: 60px;
-          color: inherit;
         }
 
         p {
           font-weight: 600;
           text-transform: capitalize;
           color: inherit;
+          text-decoration: none;
+          font-family: "Open Sans", sans-serif;
         }
       }
 
@@ -101,6 +85,7 @@ $darkgrey: #5b5b5b;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 10px;
       }
 
       .overlay {
@@ -109,12 +94,17 @@ $darkgrey: #5b5b5b;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.55);
         transition: 0.3s ease-in-out;
+        border-radius: 10px;
       }
 
       &:hover {
         .overlay {
           background-color: rgba(23, 21, 21, 0.164);
         }
+      }
+
+      @include sm {
+        margin: auto;
       }
     }
   }
