--- a/client/src/partials/CreateListing.scss
+++ b/client/src/partials/CreateListing.scss
@@ -6,6 +6,7 @@ $grey: #94949460;
 $darkgrey: #5b5b5b;
 
 .createListing_container {
+    margin: 0;
     background-color: $lightgrey;
     padding: 40px 60px 120px;
 
