--- a/client/src/partials/Header.scss
+++ b/client/src/partials/Header.scss
@@ -27,11 +27,12 @@ $pinkred: #F8395A;
         margin: 50px auto;
         text-transform: capitalize;
         text-shadow: 1px 1px 2px #181818;
+        text-align: center;
     }
 
     &_become_host {
         text-align: center;
-        margin:auto;
+        margin: 10px auto;
         a {
             color: #fff;
             text-decoration: none;
@@ -44,12 +45,16 @@ $pinkred: #F8395A;
                 box-shadow: 0 1px 10px 3px rgba(255, 255, 255, 0.677);
             }
         }
+        @include sm {
+            margin-bottom: 20px;
+        }
     }
 
     &_welcome_message {
         color: #fff;
         margin: 50px auto;
         text-shadow: 1px 1px 2px #181818;
+        text-align: center;
     }
 
     &_website_desc {
