--- a/client/src/partials/Listings.scss
+++ b/client/src/partials/Listings.scss
@@ -6,18 +6,36 @@ $lightgrey: #efefef;
 $grey: #7c7c7c;
 $darkgrey: #626262;
 
-h3{
-  color: $blue;
-  font-size: 40px;
-  font-weight: 800;
-  margin: 15px;
+.category_container {
+  background-color: rgba(230, 248, 255, 0.596);
+  padding: 20px;
 }
+
+.listings {
+  background-color: rgba(230, 248, 255, 0.596);
+}
+
+.divider {
+  border: 1px solid rgba(124, 124, 124, 0.12);
+  margin: 20px;
+}
+
+.listing-title {
+  color: rgb(34, 34, 34);
+  font-size: 30px;
+  font-weight: 800;
+  text-shadow: 1px 1px 2px #fff;
+  text-align: center;
+
+}
+
 .category-list {
   padding: 50px 80px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 60px;
+  gap: 10px;
+
 
   @include sm {
     padding: 50px 20px;
@@ -26,36 +44,47 @@ h3{
   .category {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
- 
+    width: 110px;
+    height: 90px;
+    border: 1px solid $grey;
+    border-radius: 10px;
     cursor: pointer;
+    transition: 0.2s ease;
 
-    &_icon {
+    .listing-icon {
       font-size: 30px;
-      color: $darkgrey;
+      color: $grey;
     }
 
     p {
-      font-size: 18px;
-      font-weight: 700;
-      color: $darkgrey;
+      font-size: 15px;
+      font-weight: 600;
+      text-align: center;
+      color: $grey;
     }
 
     &:hover {
-      color: $pinkred;
-    
+
+      background-color: $lightgrey;
+
     }
   }
 
   .selected {
     color: $pinkred;
-    border: solid;
+    border: 1.5px solid;
     border-color: #F8395A;
+    background-color: $lightgrey;
   }
-}
-
-.loader {
-  margin: auto;
+  .listing-details .h1{
+    color: rgb(34, 34, 34);
+    font-size: 30px;
+    font-weight: 800;
+    text-shadow: 1px 1px 2px #fff;
+    text-align: center;
+  }
 }
 
 .listings {
@@ -68,4 +97,6 @@ h3{
   @include lg {
     padding: 0 20px 120px;
   }
+
+ 
 }
