--- a/client/src/partials/LoginPage.scss
+++ b/client/src/partials/LoginPage.scss
@@ -3,12 +3,7 @@
 
 $background-gradient: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147)); 
 $secondary-color: rgb(101, 223, 73);
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
-}
+
 
 .login-section {
   width: 100vw;
@@ -44,6 +39,7 @@ $secondary-color: rgb(101, 223, 73);
   a {
     color: #efefef;
     text-decoration: none;
+    font-family: "Open Sans", sans-serif;
 
     &:hover {
       text-decoration: underline;
@@ -56,10 +52,11 @@ $secondary-color: rgb(101, 223, 73);
   flex-direction: column;
 }
 
-h2 {
+.login {
   font-size: 2rem;
   margin-bottom: 20px;
   color: #fff;
+  font-family: "Open Sans", sans-serif;
 }
 
 .loginHr {
@@ -85,6 +82,7 @@ h2 {
     font-size: 16px;
     pointer-events: none;
     transition: 0.15s ease;
+    font-family: "Open Sans", sans-serif;
   }
 
   input {
@@ -95,6 +93,7 @@ h2 {
     outline: none;
     font-size: 16px;
     color: #fff;
+    font-family: "Open Sans", sans-serif;
 
     &:focus~label,
     &:valid~label {
@@ -118,7 +117,7 @@ h2 {
   font-size: 16px;
   border: 2px solid transparent;
   transition: 0.3s ease;
-
+  font-family: "Open Sans", sans-serif;
   &:hover {
     color: #fff;
     border-color: #fff;
@@ -132,12 +131,14 @@ h2 {
 
   p {
     color: #fff;
+    font-family: "Open Sans", sans-serif;
   }
 
   a {
     font-weight: 500;
     text-decoration: underline;
     color: #fff;
+    font-family: "Open Sans", sans-serif;
 
     &:hover {
       color: $secondary-color;
