--- a/client/src/partials/navbar.scss
+++ b/client/src/partials/navbar.scss
@@ -74,6 +74,9 @@ $darkgrey: #5b5b5b;
         color: $pinkred;
         text-shadow: 1px 1px 2px #d1d1d1;
       }
+      @include sm {
+        display: none;
+      }
     }
 
     &_account {
@@ -126,7 +129,6 @@ $darkgrey: #5b5b5b;
 
         &:hover {
           color: $pinkred;
-          background-color: rgba(217, 213, 213, 0.2);
         }
       }
     }
