--- a/client/src/partials/CreateListing.scss
+++ b/client/src/partials/CreateListing.scss
@@ -1,28 +1,37 @@
 @import "../partials/breakpoints.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 $pinkred: #F8395A;
 $blue: #24355A;
 $lightgrey: #eae5e5;
 $grey: #94949460;
 $darkgrey: #5b5b5b;
 
+.mainPage-Container {
+    background: url("../../public/assets/CLBG1.jpg") center;
+}
+
 .createListing_container {
     margin: 0;
-    background-color: $lightgrey;
     padding: 40px 60px 120px;
+  
 
     h1 {
-        color: $blue;
+        color: #fff;
+        font-family: 'Poppins', sans-serif;
+        font-size: 40px;
+        text-align: center;
+        text-shadow: 1px 1px 2px #242424;
     }
 
-    @include mm {
-        padding: 40px 20px;
+    @include sm {
+        padding: 10px 0px 20px;
     }
 
-    
+
 }
 
 .createListing-content {
-    background-color:$grey;
+    background-color: $grey;
     padding: 1px 3px;
     border-radius: 20px;
     margin: 10px;
@@ -39,16 +48,17 @@ $darkgrey: #5b5b5b;
 
         h2 {
             color: $pinkred;
+            font-size: 25px;
         }
 
-        hr {
-            color: black;
-            margin: auto;
-            height: 5px;
-            width: 100%;
-            border-radius: 5px;
-            border-style: none;
+        .divideF {
+            color: $pinkred;
+            margin: 35px auto;
+            width: 4%;
+            border: 8px dotted;
+            border-bottom: none;
         }
+
 
         h3 {
             margin: 40px 0 20px;
@@ -95,13 +105,13 @@ $darkgrey: #5b5b5b;
                 }
 
                 &:hover {
-                    border: 2px solid $pinkred;
+                    border: 1px solid $pinkred;
                     background-color: $lightgrey;
                 }
             }
 
             .selected {
-                border: 2px solid $pinkred;
+                border: 1px solid $pinkred;
                 background-color: $lightgrey;
             }
         }
@@ -135,13 +145,13 @@ $darkgrey: #5b5b5b;
                 }
 
                 &:hover {
-                    border: 2px solid $pinkred;
+                    border: 1px solid $pinkred;
                     background-color: $lightgrey;
                 }
             }
 
             .selected {
-                border: 2px solid $pinkred;
+                border: 1px solid $pinkred;
                 background-color: $lightgrey;
             }
         }
@@ -175,7 +185,7 @@ $darkgrey: #5b5b5b;
                 border-radius: 10px;
                 font-size: 16px;
                 font-weight: 600;
-                width: 100%;
+                width: fit-content;
 
                 &:focus {
                     outline: none;
@@ -183,7 +193,7 @@ $darkgrey: #5b5b5b;
             }
         }
 
-        .basics {
+        .overview {
             display: flex;
             flex-wrap: wrap;
             gap: 40px;
@@ -211,9 +221,10 @@ $darkgrey: #5b5b5b;
     }
 
     &_step2 {
-        background-color: white;
+        background-color: rgb(255, 255, 255);
         padding: 30px 40px;
-        border-radius: 20px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
         margin-top: 10px;
 
         @include sm {
@@ -222,20 +233,29 @@ $darkgrey: #5b5b5b;
 
         h2 {
             color: $pinkred;
+            font-size: 25px;
+            font-family: 'Poppins', sans-serif;
         }
 
-        hr {
-            margin: 15px 0 25px;
+        .divideF {
+            color: $pinkred;
+            margin: 35px auto;
+            width: 4%;
+            border: 8px dotted;
+            border-bottom: none;
         }
+
 
         h3 {
             margin: 40px 0 20px;
             color: $blue;
+            font-family: 'Poppins', sans-serif;
         }
 
         .amenities {
             display: flex;
             flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
 
             .facility {
@@ -257,10 +277,11 @@ $darkgrey: #5b5b5b;
                 p {
                     font-weight: 600;
                     text-align: center;
+                    font-family: 'Poppins', sans-serif;
                 }
 
                 &:hover {
-                    border: 2px solid $pinkred;
+                    border: 1px solid $pinkred;
                     background-color: $lightgrey;
                 }
 
@@ -272,7 +293,7 @@ $darkgrey: #5b5b5b;
             }
 
             .selected {
-                border: 2px solid $pinkred;
+                border: 1px solid $pinkred;
                 background-color: $lightgrey;
             }
         }
@@ -324,12 +345,24 @@ $darkgrey: #5b5b5b;
                 p {
                     font-weight: 600;
                     text-align: center;
+                    font-family: 'Poppins', sans-serif;
                 }
+                @include sm {
+                   
+                    padding: 40px 30px;
+                    margin: auto;
+                }
+               
             }
 
             .together {
                 width: 250px;
                 height: 150px;
+                @include sm {
+                   
+                    padding: 40px 30px;
+                    margin: auto;
+                }
             }
 
             .alone {
@@ -341,8 +374,15 @@ $darkgrey: #5b5b5b;
                 }
 
                 @include sm {
+                   
                     padding: 40px 30px;
+                    margin: auto;
                 }
+            }
+            @include sm {
+                   
+                padding: 40px 30px;
+                margin: auto;
             }
         }
 
@@ -354,6 +394,7 @@ $darkgrey: #5b5b5b;
                 font-size: 16px;
                 font-weight: 600;
                 width: 100%;
+                font-family: 'Poppins', sans-serif;
 
                 &:focus {
                     outline: none;
@@ -366,6 +407,7 @@ $darkgrey: #5b5b5b;
             p {
                 font-weight: 700;
                 margin: 20px 0 10px;
+                font-family: 'Poppins', sans-serif;
             }
 
             input,
@@ -376,6 +418,7 @@ $darkgrey: #5b5b5b;
                 font-size: 16px;
                 font-weight: 600;
                 width: 600px;
+                font-family: 'Poppins', sans-serif;
 
                 @include ml {
                     width: 450px;
@@ -386,7 +429,7 @@ $darkgrey: #5b5b5b;
                 }
 
                 @include sm {
-                    width: 280px;
+                    width: 250px;
                 }
 
                 &:focus {
@@ -398,29 +441,35 @@ $darkgrey: #5b5b5b;
                 font-size: 25px;
                 font-weight: 700;
                 margin-right: 20px;
+                font-family: 'Poppins', sans-serif;
             }
 
             .price {
                 width: 200px;
+                font-family: 'Poppins', sans-serif;
             }
-        }    
+        }
     }
+
     &_sub_button {
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 20px;
-        margin:1px auto ;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        margin: 0px auto;
         padding: 10px;
-        background-color: rgba(255, 255, 255, 0.63);
+        background-color: rgb(255, 255, 255);
 
 
         .submit_btn {
-              padding: 10px;
-               border: #ffffff;
-               border-radius: 15px;
-               background-color: #F8395A;
-               color: #ffffff;
+            padding: 10px;
+            border: #ffffff;
+            border-radius: 15px;
+            background-color: #F8395A;
+            color: #ffffff;
+            font-family: 'Poppins', sans-serif;
+
             &:hover {
                 box-shadow: 0 0 10px 3px rgb(117, 117, 117);
             }
