--- a/client/src/partials/Footer.scss
+++ b/client/src/partials/Footer.scss
@@ -15,8 +15,12 @@ $darkgrey: #626262;
   padding: 10px 70px;
   background-color: rgba(230, 248, 255, 0.596);
 
-  @include lg {
-    padding: 10px 30px;
+  @include sm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px 20px;
+    gap: 0;
   }
 
   &_left {
@@ -47,6 +51,13 @@ $darkgrey: #626262;
           transform: scale(1.2);
         }
       }
+      @include sm {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 
@@ -57,6 +68,7 @@ $darkgrey: #626262;
       list-style: none;
       margin-top: 20px;
       cursor: pointer;
+      padding: 0;
 
       li:hover {
         color: $pinkred
@@ -73,7 +85,9 @@ $darkgrey: #626262;
     }
 
     @include md {
-      display: none;
+      margin-top: 5px;
+      text-align: center;
+      padding: 0;
     }
   }
 
@@ -94,7 +108,9 @@ $darkgrey: #626262;
     }
 
     @include sm {
-      display: none;
+      margin-top: 5px;
+      text-align: center;
+      padding: 0;
     }
   }
 }
