--- a/client/src/partials/ListingCard.scss
+++ b/client/src/partials/ListingCard.scss
@@ -15,11 +15,13 @@ $darkgrey: #626262;
   cursor: pointer;
   padding: 10px;
   border-radius: 10px;
-  background-color:$lightgrey;
+  border: 1.5px solid #fff;
+  background-color:rgba(196, 235, 251, 0.515);
 
 
   &:hover {
-    background-color: $grey;
+  border: none;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   }
 
   .slider-container {
