--- a/client/src/partials/navbar.scss
+++ b/client/src/partials/navbar.scss
@@ -1,4 +1,5 @@
 @import "./breakpoints.scss";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 $pinkred: #fe5c77;
 $blue: #343c4c;
@@ -15,6 +16,7 @@ $darkgrey: #5b5b5b;
   align-items: center;
   position: relative;
   background-color:rgba(230, 248, 255, 0.596);
+  
 
   @include sm {
     padding: 10px 20px;
@@ -34,12 +36,14 @@ $darkgrey: #5b5b5b;
     gap: 40px;
     align-items: center;
     background: #eeeeee;
+    font-family: 'Poppins', sans-serif;
 
     input {
       border: none;
       outline: none;
       background: transparent;
       color: #000000;
+      font-family: 'Poppins', sans-serif;
     }
 
     &:hover {
@@ -67,6 +71,7 @@ $darkgrey: #5b5b5b;
       cursor: pointer;
       padding: 5px;
       text-shadow: 1px 1px 2px #242424;
+      font-family: 'Poppins', sans-serif;
 
       &:hover {
         border: 1px solid #ffffffd6;
@@ -90,7 +95,7 @@ $darkgrey: #5b5b5b;
       gap: 15px;
       background-color:rgba(230, 248, 255, 0.596);
       cursor: pointer;
-
+      font-family: 'Poppins', sans-serif;
       &:hover {
         box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.2);
       }
@@ -108,7 +113,7 @@ $darkgrey: #5b5b5b;
       top: 80px;
       display: flex;
       flex-direction: column;
-      width: 200px;
+      width: 219px;
       padding: 10px 0;
       border: 1px solid $lightgrey;
       border-radius: 20px;
@@ -126,6 +131,7 @@ $darkgrey: #5b5b5b;
         color: $blue;
         font-weight: 700;
         text-shadow: 1px 1px 2px #d6d6d6;
+        font-family: 'Poppins', sans-serif;
 
         &:hover {
           color: $pinkred;
